--- a/getStarted.html
+++ b/getStarted.html
@@ -4,15 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles/style.css">
+    <title>Get Started</title>
 </head>
 
 <body>
     <header>
         <nav>
             <ul>
-                <li> <a href="getStarted.html" class="new-user"> Get started</a></li>
-                <li> <a href="#"> Stakeholders</a></li>
+                <a href="index.html" class="logo"><img src="assets/logo.png" alt="home"></a>
+                <li> <a href="getStarted.html" class="new-user">Get started</a></li>
+                <li> <a href="#"> Stakeholders </a></li>
             </ul>
         </nav>
     </header>
