--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header>
         <nav>
             <ul>
+                <a href="index.html" class="logo"><img src="assets/logo.png" alt="home"></a>
                 <li> <a href="getStarted.html" class="new-user">Get started</a></li>
                 <li> <a href="#"> Stakeholders </a></li>
             </ul>
@@ -21,11 +22,12 @@
     <main>
         <section>
             <div>
-                <img src="assets/#" alt="Icon">
+                <img src="assets/icon.png" alt="Icon">
             </div>
             <div>
                 <h2> Why choose us? </h2>
-                <button> <a href="#"> Click me!</a></button>
+                yadayada hier komt tekst
+                <button> <a href="getStarted.html"> Click me!</a></button>
             </div>
         </section>
     </main>
