--- a/calculator.html
+++ b/calculator.html
@@ -25,29 +25,35 @@
             <div class="card" id="1">
                 <h3> question</h3>
                 <img src="sdg" alt="sdg">
-                <div class="red shuffle"> <a href="#2">1</a></div>
-                <div class="orange shuffle"><a href="#2">2</a></div>
-                <div class="yellow shuffle"><a href="#2">3</a></div>
-                <div class="light-green shuffle"><a href="#2">4</a></div>
-                <div class="green shuffle"><a href="#2">5</a></div>
+                <fieldset>
+                    <input type="checkbox" name="1" id="answer1-1" value="1">
+                    <input type="checkbox" name="2" id="answer1-2" value="1">
+                    <input type="checkbox" name="3" id="answer1-3" value="1">
+                    <input type="checkbox" name="4" id="answer1-4" value="1">
+                    <input type="checkbox" name="5" id="answer1-5" value="1">
+                </fieldset>
             </div>
             <div class="card" id="2">
                 <h3> question</h3>
                 <img src="sdg" alt="sdg">
-                <div class="red shuffle"> <a href="#3">1</a></div>
-                <div class="orange shuffle"><a href="#3">2</a></div>
-                <div class="yellow shuffle"><a href="#3">3</a></div>
-                <div class="light-green shuffle"><a href="#3">4</a></div>
-                <div class="green shuffle"><a href="#3">5</a></div>
+                <fieldset>
+                    <input type="checkbox" name="1" id="answer2-1" value="1">
+                    <input type="checkbox" name="2" id="answer2-2" value="1">
+                    <input type="checkbox" name="3" id="answer2-3" value="1">
+                    <input type="checkbox" name="4" id="answer2-4" value="1">
+                    <input type="checkbox" name="5" id="answer2-5" value="1">
+                </fieldset>
                 </div>
             <div class="card" id="3">
                 <h3> question</h3>
                 <img src="sdg" alt="sdg">
-                <div class="red shuffle"> <a href="#1">1</a></div>
-                <div class="orange shuffle"><a href="#1">2</a></div>
-                <div class="yellow shuffle"><a href="#1">3</a></div>
-                <div class="light-green shuffle"><a href="#1">4</a></div>
-                <div class="green shuffle"><a href="#1">5</a></div>
+                <fieldset>
+                    <input type="checkbox" name="1" id="answer3-1" value="1">
+                    <input type="checkbox" name="2" id="answer3-2" value="1">
+                    <input type="checkbox" name="3" id="answer3-3" value="1">
+                    <input type="checkbox" name="4" id="answer3-4" value="1">
+                    <input type="checkbox" name="5" id="answer3-5" value="1">
+                </fieldset>
             </div>
         </section>
     </main> 
