betere html en css fix
medemogelijk gemaakt door:
Anouk
Bard
Krijn

--- a/calculator.html
+++ b/calculator.html
@@ -12,7 +12,7 @@
         <ul>
             <a href="index.html" class="logo"><img src="assets/logo.png" alt="home"></a>
             <li> <a href="getStarted.html" class="new-user">Get started</a></li>
-            <li> <a href="#"> Stakeholders </a></li>
+            <li> <a href="calculator.html"> Calculate </a></li>
         </ul>
     </nav>
     <main>
@@ -23,37 +23,34 @@
         </section>
         <section>
             <div class="card" id="1">
-                <h3> question</h3>
-                <img src="sdg" alt="sdg">
                 <fieldset>
-                    <input type="checkbox" name="1" id="answer1-1" value="1">
-                    <input type="checkbox" name="2" id="answer1-2" value="1">
-                    <input type="checkbox" name="3" id="answer1-3" value="1">
-                    <input type="checkbox" name="4" id="answer1-4" value="1">
-                    <input type="checkbox" name="5" id="answer1-5" value="1">
-                </fieldset>
+                    <legend>dit is een vraag</legend>
+                    <label><input type="checkbox" name="1" class="shuffle red" id="answer1-1" value="1"> 1</label>
+                    <label><input type="checkbox" name="1" class="shuffle orange" id="answer1-2" value="2"> 2</label>
+                    <label><input type="checkbox" name="1" class="shuffle yellow" id="answer1-3" value="3"> 3</label>
+                    <label><input type="checkbox" name="1" class="shuffle light-green" id="answer1-4" value="4"> 4</label>
+                    <label><input type="checkbox" name="1" class="shuffle green" id="answer1-5" value="5"> 5</label>             
+                   </fieldset>
             </div>
             <div class="card" id="2">
-                <h3> question</h3>
-                <img src="sdg" alt="sdg">
                 <fieldset>
-                    <input type="checkbox" name="1" id="answer2-1" value="1">
-                    <input type="checkbox" name="2" id="answer2-2" value="1">
-                    <input type="checkbox" name="3" id="answer2-3" value="1">
-                    <input type="checkbox" name="4" id="answer2-4" value="1">
-                    <input type="checkbox" name="5" id="answer2-5" value="1">
-                </fieldset>
+                    <legend>dit is een vraag</legend>
+                    <label><input type="checkbox" name="1" class="shuffle red" id="answer2-1" value="1"> 1</label>
+                    <label><input type="checkbox" name="1" class="shuffle orange" id="answer2-2" value="2"> 2</label>
+                    <label><input type="checkbox" name="1" class="shuffle yellow" id="answer2-3" value="3"> 3</label>
+                    <label><input type="checkbox" name="1" class="shuffle light-green" id="answer2-4" value="4"> 4</label>
+                    <label><input type="checkbox" name="1" class="shuffle green" id="answer2-5" value="5"> 5</label>             
+                   </fieldset>
                 </div>
             <div class="card" id="3">
-                <h3> question</h3>
-                <img src="sdg" alt="sdg">
                 <fieldset>
-                    <input type="checkbox" name="1" id="answer3-1" value="1">
-                    <input type="checkbox" name="2" id="answer3-2" value="1">
-                    <input type="checkbox" name="3" id="answer3-3" value="1">
-                    <input type="checkbox" name="4" id="answer3-4" value="1">
-                    <input type="checkbox" name="5" id="answer3-5" value="1">
-                </fieldset>
+                    <legend>dit is een vraag</legend>
+                    <label><input type="checkbox" name="1" class="shuffle red" id="answer3-1" value="1"> 1</label>
+                    <label><input type="checkbox" name="1" class="shuffle orange" id="answer3-2" value="2"> 2</label>
+                    <label><input type="checkbox" name="1" class="shuffle yellow" id="answer3-3" value="3"> 3</label>
+                    <label><input type="checkbox" name="1" class="shuffle light-green" id="answer3-4" value="4"> 4</label>
+                    <label><input type="checkbox" name="1" class="shuffle green" id="answer3-5" value="5"> 5</label>             
+                   </fieldset>
             </div>
         </section>
     </main> 
