--- a/getStarted.html
+++ b/getStarted.html
@@ -14,7 +14,7 @@
             <ul>
                 <a href="index.html" class="logo"><img src="assets/logo.png" alt="home"></a>
                 <li> <a href="getStarted.html" class="new-user">Get started</a></li>
-                <li> <a href="#"> Stakeholders </a></li>
+                <li> <a href="calculator.html"> Calculate </a></li>
             </ul>
         </nav>
     </header>
@@ -36,6 +36,7 @@
                 <h3>How we calculate</h3>
                 <p> We calculate using these 12 Sustainable development goals</p>
                 De 12 goals etc
+                <a href="calculator.html"> <button> Start calculating! </button></a>
             </div>
             <img src="#" alt="SDG">
         </section>
