--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <ul>
                 <a href="index.html" class="logo"><img src="assets/logo.png" alt="home"></a>
                 <li> <a href="getStarted.html" class="new-user">Get started</a></li>
-                <li> <a href="#"> Stakeholders </a></li>
+                <li> <a href="calculator.html"> Calculate </a></li>
             </ul>
         </nav>
         <h1> The best calculator tool for <span>your</span> business!</h1>
