radio ipv checkbox
**VORIGE COMMIT-BADR GEEN BARD**

weer medemoglijk gemaakt door:
Krijn

--- a/calculator.html
+++ b/calculator.html
@@ -25,31 +25,31 @@
             <div class="card" id="1">
                 <fieldset>
                     <legend>dit is een vraag</legend>
-                    <label><input type="checkbox" name="1" class="shuffle red" id="answer1-1" value="1"> 1</label>
-                    <label><input type="checkbox" name="1" class="shuffle orange" id="answer1-2" value="2"> 2</label>
-                    <label><input type="checkbox" name="1" class="shuffle yellow" id="answer1-3" value="3"> 3</label>
-                    <label><input type="checkbox" name="1" class="shuffle light-green" id="answer1-4" value="4"> 4</label>
-                    <label><input type="checkbox" name="1" class="shuffle green" id="answer1-5" value="5"> 5</label>             
+                    <label><input type="radio"radioname="1" class="shuffle red" id="answer1-1" value="1"> 1</label>
+                    <label><input type="radio" name="1" class="shuffle orange" id="answer1-2" value="2"> 2</label>
+                    <label><input type="radio" name="1" class="shuffle yellow" id="answer1-3" value="3"> 3</label>
+                    <label><input type="radio" name="1" class="shuffle light-green" id="answer1-4" value="4"> 4</label>
+                    <label><input type="radio" name="1" class="shuffle green" id="answer1-5" value="5"> 5</label>             
                    </fieldset>
             </div>
             <div class="card" id="2">
                 <fieldset>
                     <legend>dit is een vraag</legend>
-                    <label><input type="checkbox" name="1" class="shuffle red" id="answer2-1" value="1"> 1</label>
-                    <label><input type="checkbox" name="1" class="shuffle orange" id="answer2-2" value="2"> 2</label>
-                    <label><input type="checkbox" name="1" class="shuffle yellow" id="answer2-3" value="3"> 3</label>
-                    <label><input type="checkbox" name="1" class="shuffle light-green" id="answer2-4" value="4"> 4</label>
-                    <label><input type="checkbox" name="1" class="shuffle green" id="answer2-5" value="5"> 5</label>             
+                    <label><input type="radio" name="1" class="shuffle red" id="answer2-1" value="1"> 1</label>
+                    <label><input type="radio" name="1" class="shuffle orange" id="answer2-2" value="2"> 2</label>
+                    <label><input type="radio" name="1" class="shuffle yellow" id="answer2-3" value="3"> 3</label>
+                    <label><input type="radio" name="1" class="shuffle light-green" id="answer2-4" value="4"> 4</label>
+                    <label><input type="radio" name="1" class="shuffle green" id="answer2-5" value="5"> 5</label>             
                    </fieldset>
                 </div>
             <div class="card" id="3">
                 <fieldset>
                     <legend>dit is een vraag</legend>
-                    <label><input type="checkbox" name="1" class="shuffle red" id="answer3-1" value="1"> 1</label>
-                    <label><input type="checkbox" name="1" class="shuffle orange" id="answer3-2" value="2"> 2</label>
-                    <label><input type="checkbox" name="1" class="shuffle yellow" id="answer3-3" value="3"> 3</label>
-                    <label><input type="checkbox" name="1" class="shuffle light-green" id="answer3-4" value="4"> 4</label>
-                    <label><input type="checkbox" name="1" class="shuffle green" id="answer3-5" value="5"> 5</label>             
+                    <label><input type="radio" name="1" class="shuffle red" id="answer3-1" value="1"> 1</label>
+                    <label><input type="radio" name="1" class="shuffle orange" id="answer3-2" value="2"> 2</label>
+                    <label><input type="radio" name="1" class="shuffle yellow" id="answer3-3" value="3"> 3</label>
+                    <label><input type="radio" name="1" class="shuffle light-green" id="answer3-4" value="4"> 4</label>
+                    <label><input type="radio" name="1" class="shuffle green" id="answer3-5" value="5"> 5</label>             
                    </fieldset>
             </div>
         </section>
