--- a/calculator.html
+++ b/calculator.html
@@ -22,14 +22,14 @@
             Score: <span> 3/5</span>
         </section>
         <section>
-            <div class="card" id="1">
+            <div class="card shuffle" id="1">
                 <fieldset>
                     <legend>dit is een vraag</legend>
-                    <label><input type="radio"radioname="1" class="shuffle red" id="answer1-1" value="1"> 1</label>
-                    <label><input type="radio" name="1" class="shuffle orange" id="answer1-2" value="2"> 2</label>
-                    <label><input type="radio" name="1" class="shuffle yellow" id="answer1-3" value="3"> 3</label>
-                    <label><input type="radio" name="1" class="shuffle light-green" id="answer1-4" value="4"> 4</label>
-                    <label><input type="radio" name="1" class="shuffle green" id="answer1-5" value="5"> 5</label>             
+                    <label><input type="radio" name="1" class="red" id="answer1-1" value="1"> 1</label>
+                    <label><input type="radio" name="1" class="orange" id="answer1-2" value="2"> 2</label>
+                    <label><input type="radio" name="1" class="yellow" id="answer1-3" value="3"> 3</label>
+                    <label><input type="radio" name="1" class="light-green" id="answer1-4" value="4"> 4</label>
+                    <label><input type="radio" name="1" class="green" id="answer1-5" value="5"> 5</label>             
                    </fieldset>
             </div>
             <div class="card" id="2">
