mini fix inputs

--- a/calculator.html
+++ b/calculator.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles/calc.css">
+    <link rel="stylesheet" hreaf="styles/calc.css">
     <script src="scripts/main.js"></script>
     <title>Calculator</title>
 </head>
@@ -35,21 +35,21 @@
             <div class="card" id="2">
                 <fieldset>
                     <legend>dit is een vraag</legend>
-                    <label><input type="radio" name="1" class="shuffle red" id="answer2-1" value="1"> 1</label>
-                    <label><input type="radio" name="1" class="shuffle orange" id="answer2-2" value="2"> 2</label>
-                    <label><input type="radio" name="1" class="shuffle yellow" id="answer2-3" value="3"> 3</label>
-                    <label><input type="radio" name="1" class="shuffle light-green" id="answer2-4" value="4"> 4</label>
-                    <label><input type="radio" name="1" class="shuffle green" id="answer2-5" value="5"> 5</label>             
+                    <label><input type="radio" name="2" class="shuffle red" id="answer2-1" value="1"> 1</label>
+                    <label><input type="radio" name="2" class="shuffle orange" id="answer2-2" value="2"> 2</label>
+                    <label><input type="radio" name="2" class="shuffle yellow" id="answer2-3" value="3"> 3</label>
+                    <label><input type="radio" name="2" class="shuffle light-green" id="answer2-4" value="4"> 4</label>
+                    <label><input type="radio" name="2" class="shuffle green" id="answer2-5" value="5"> 5</label>             
                    </fieldset>
                 </div>
             <div class="card" id="3">
                 <fieldset>
                     <legend>dit is een vraag</legend>
-                    <label><input type="radio" name="1" class="shuffle red" id="answer3-1" value="1"> 1</label>
-                    <label><input type="radio" name="1" class="shuffle orange" id="answer3-2" value="2"> 2</label>
-                    <label><input type="radio" name="1" class="shuffle yellow" id="answer3-3" value="3"> 3</label>
-                    <label><input type="radio" name="1" class="shuffle light-green" id="answer3-4" value="4"> 4</label>
-                    <label><input type="radio" name="1" class="shuffle green" id="answer3-5" value="5"> 5</label>             
+                    <label><input type="radio" name="3" class="shuffle red" id="answer3-1" value="1"> 1</label>
+                    <label><input type="radio" name="3" class="shuffle orange" id="answer3-2" value="2"> 2</label>
+                    <label><input type="radio" name="3" class="shuffle yellow" id="answer3-3" value="3"> 3</label>
+                    <label><input type="radio" name="3" class="shuffle light-green" id="answer3-4" value="4"> 4</label>
+                    <label><input type="radio" name="3" class="shuffle green" id="answer3-5" value="5"> 5</label>             
                    </fieldset>
             </div>
         </section>
