--- a/calculator.html
+++ b/calculator.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" hreaf="styles/calc.css">
+    <link rel="stylesheet" href="styles/calc.css">
     <script src="scripts/main.js"></script>
     <title>Calculator</title>
 </head>
