card animation fix JS
Gefixt door Tristan!!! ik kreeg wel uitleg over de code en wat het probleem !

--- a/calculator.html
+++ b/calculator.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/calc.css">
-    <script src="scripts/main.js"></script>
     <title>Calculator</title>
 </head>
 <body>
@@ -22,7 +21,7 @@
             Score: <span> 3/5</span>
         </section>
         <section>
-            <div class="card shuffle" id="1">
+            <div class="card" id="card1">
                 <fieldset>
                     <legend>dit is een vraag</legend>
                     <label><input type="radio" name="1" class="red" id="answer1-1" value="1"> 1</label>
@@ -35,24 +34,26 @@
             <div class="card" id="2">
                 <fieldset>
                     <legend>dit is een vraag</legend>
-                    <label><input type="radio" name="2" class="shuffle red" id="answer2-1" value="1"> 1</label>
-                    <label><input type="radio" name="2" class="shuffle orange" id="answer2-2" value="2"> 2</label>
-                    <label><input type="radio" name="2" class="shuffle yellow" id="answer2-3" value="3"> 3</label>
-                    <label><input type="radio" name="2" class="shuffle light-green" id="answer2-4" value="4"> 4</label>
-                    <label><input type="radio" name="2" class="shuffle green" id="answer2-5" value="5"> 5</label>             
+                    <label><input type="radio" name="2" class="red" id="answer2-1" value="1"> 1</label>
+                    <label><input type="radio" name="2" class="orange" id="answer2-2" value="2"> 2</label>
+                    <label><input type="radio" name="2" class="yellow" id="answer2-3" value="3"> 3</label>
+                    <label><input type="radio" name="2" class="light-green" id="answer2-4" value="4"> 4</label>
+                    <label><input type="radio" name="2" class="green" id="answer2-5" value="5"> 5</label>             
                    </fieldset>
                 </div>
             <div class="card" id="3">
                 <fieldset>
                     <legend>dit is een vraag</legend>
-                    <label><input type="radio" name="3" class="shuffle red" id="answer3-1" value="1"> 1</label>
-                    <label><input type="radio" name="3" class="shuffle orange" id="answer3-2" value="2"> 2</label>
-                    <label><input type="radio" name="3" class="shuffle yellow" id="answer3-3" value="3"> 3</label>
-                    <label><input type="radio" name="3" class="shuffle light-green" id="answer3-4" value="4"> 4</label>
-                    <label><input type="radio" name="3" class="shuffle green" id="answer3-5" value="5"> 5</label>             
+                    <label><input type="radio" name="3" class="red" id="answer3-1" value="1"> 1</label>
+                    <label><input type="radio" name="3" class="orange" id="answer3-2" value="2"> 2</label>
+                    <label><input type="radio" name="3" class="yellow" id="answer3-3" value="3"> 3</label>
+                    <label><input type="radio" name="3" class="light-green" id="answer3-4" value="4"> 4</label>
+                    <label><input type="radio" name="3" class="green" id="answer3-5" value="5"> 5</label>             
                    </fieldset>
             </div>
         </section>
     </main> 
 </body>
 </html>
+
+<script src="scripts/main.js"></script>
