--- a/calculator.html
+++ b/calculator.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/calc.css">
+    <script defer src="scripts/main.js"></script>
     <title>Calculator</title>
 </head>
 <body>
@@ -23,7 +24,7 @@
         <section>
             <div class="card" id="card1">
                 <fieldset>
-                    <legend>dit is een vraag</legend>
+                    <legend>dit is een vraag 1</legend>
                     <label><input type="radio" name="1" class="red" id="answer1-1" value="1"> 1</label>
                     <label><input type="radio" name="1" class="orange" id="answer1-2" value="2"> 2</label>
                     <label><input type="radio" name="1" class="yellow" id="answer1-3" value="3"> 3</label>
@@ -31,9 +32,9 @@
                     <label><input type="radio" name="1" class="green" id="answer1-5" value="5"> 5</label>             
                    </fieldset>
             </div>
-            <div class="card" id="2">
+            <div class="card" id="card2">
                 <fieldset>
-                    <legend>dit is een vraag</legend>
+                    <legend>dit is een vraag 2</legend>
                     <label><input type="radio" name="2" class="red" id="answer2-1" value="1"> 1</label>
                     <label><input type="radio" name="2" class="orange" id="answer2-2" value="2"> 2</label>
                     <label><input type="radio" name="2" class="yellow" id="answer2-3" value="3"> 3</label>
@@ -41,9 +42,9 @@
                     <label><input type="radio" name="2" class="green" id="answer2-5" value="5"> 5</label>             
                    </fieldset>
                 </div>
-            <div class="card" id="3">
+            <div class="card" id="card3">
                 <fieldset>
-                    <legend>dit is een vraag</legend>
+                    <legend>dit is een vraag 3</legend>
                     <label><input type="radio" name="3" class="red" id="answer3-1" value="1"> 1</label>
                     <label><input type="radio" name="3" class="orange" id="answer3-2" value="2"> 2</label>
                     <label><input type="radio" name="3" class="yellow" id="answer3-3" value="3"> 3</label>
@@ -51,9 +52,20 @@
                     <label><input type="radio" name="3" class="green" id="answer3-5" value="5"> 5</label>             
                    </fieldset>
             </div>
+            <div class="card" id="card4">
+                <fieldset>
+                    <legend>dit is een vraag 4</legend>
+                    <label><input type="radio" name="4" class="red" id="answer4-1" value="1"> 1</label>
+                    <label><input type="radio" name="4" class="orange" id="answer4-2" value="2"> 2</label>
+                    <label><input type="radio" name="4" class="yellow" id="answer4-3" value="3"> 3</label>
+                    <label><input type="radio" name="4" class="light-green" id="answer4-4" value="4"> 4</label>
+                    <label><input type="radio" name="4" class="green" id="answer4-5" value="5"> 5</label>             
+                   </fieldset>
+            </div>
+            
         </section>
     </main> 
 </body>
 </html>
 
-<script src="scripts/main.js"></script>
+
