--- a/calculator.html
+++ b/calculator.html
@@ -19,12 +19,12 @@
         <section class="scorecard">
             <h2> Stakeholder</h2>
             <img src="assets/icon.png" alt="stakeholder">
-            Score: <span> 3/5</span>
+            Score: <em> 3/5</em>
         </section>
         <section>
             <div class="card" id="card1">
                 <fieldset>
-                    <legend>dit is een vraag 1</legend>
+                    <legend>dit is vraag 15</legend>
                     <label><input type="radio" name="1" class="red" id="answer1-1" value="1"> 1</label>
                     <label><input type="radio" name="1" class="orange" id="answer1-2" value="2"> 2</label>
                     <label><input type="radio" name="1" class="yellow" id="answer1-3" value="3"> 3</label>
@@ -34,7 +34,7 @@
             </div>
             <div class="card" id="card2">
                 <fieldset>
-                    <legend>dit is een vraag 2</legend>
+                    <legend>dit is vraag 14</legend>
                     <label><input type="radio" name="2" class="red" id="answer2-1" value="1"> 1</label>
                     <label><input type="radio" name="2" class="orange" id="answer2-2" value="2"> 2</label>
                     <label><input type="radio" name="2" class="yellow" id="answer2-3" value="3"> 3</label>
@@ -44,7 +44,7 @@
                 </div>
             <div class="card" id="card3">
                 <fieldset>
-                    <legend>dit is een vraag 3</legend>
+                    <legend>dit is vraag 13</legend>
                     <label><input type="radio" name="3" class="red" id="answer3-1" value="1"> 1</label>
                     <label><input type="radio" name="3" class="orange" id="answer3-2" value="2"> 2</label>
                     <label><input type="radio" name="3" class="yellow" id="answer3-3" value="3"> 3</label>
@@ -54,7 +54,7 @@
             </div>
             <div class="card" id="card4">
                 <fieldset>
-                    <legend>dit is een vraag 4</legend>
+                    <legend>dit is vraag 12</legend>
                     <label><input type="radio" name="4" class="red" id="answer4-1" value="1"> 1</label>
                     <label><input type="radio" name="4" class="orange" id="answer4-2" value="2"> 2</label>
                     <label><input type="radio" name="4" class="yellow" id="answer4-3" value="3"> 3</label>
@@ -62,7 +62,116 @@
                     <label><input type="radio" name="4" class="green" id="answer4-5" value="5"> 5</label>             
                    </fieldset>
             </div>
-            
+            <div class="card" id="card5">
+                <fieldset>
+                    <legend>dit is vraag 11</legend>
+                    <label><input type="radio" name="5" class="red" id="answer5-1" value="1"> 1</label>
+                    <label><input type="radio" name="5" class="orange" id="answer5-2" value="2"> 2</label>
+                    <label><input type="radio" name="5" class="yellow" id="answer5-3" value="3"> 3</label>
+                    <label><input type="radio" name="5" class="light-green" id="answer5-4" value="4"> 4</label>
+                    <label><input type="radio" name="5" class="green" id="answer5-5" value="5"> 5</label>             
+                   </fieldset>
+            </div>
+            <div class="card" id="card6">
+                <fieldset>
+                    <legend>dit is vraag 10</legend>
+                    <label><input type="radio" name="6" class="red" id="answer6-1" value="1"> 1</label>
+                    <label><input type="radio" name="6" class="orange" id="answer6-2" value="2"> 2</label>
+                    <label><input type="radio" name="6" class="yellow" id="answer6-3" value="3"> 3</label>
+                    <label><input type="radio" name="6" class="light-green" id="answer6-4" value="4"> 4</label>
+                    <label><input type="radio" name="6" class="green" id="answer6-5" value="5"> 5</label>             
+                   </fieldset>
+            </div>
+            <div class="card" id="card7">
+                <fieldset>
+                    <legend>dit is vraag 9</legend>
+                    <label><input type="radio" name="7" class="red" id="answer7-1" value="1"> 1</label>
+                    <label><input type="radio" name="7" class="orange" id="answer7-2" value="2"> 2</label>
+                    <label><input type="radio" name="7" class="yellow" id="answer7-3" value="3"> 3</label>
+                    <label><input type="radio" name="7" class="light-green" id="answer7-4" value="4"> 4</label>
+                    <label><input type="radio" name="7" class="green" id="answer7-5" value="5"> 5</label>             
+                   </fieldset>
+            </div>
+            <div class="card" id="card8">
+                <fieldset>
+                    <legend>dit is vraag 8</legend>
+                    <label><input type="radio" name="8" class="red" id="answer8-1" value="1"> 1</label>
+                    <label><input type="radio" name="8" class="orange" id="answer8-2" value="2"> 2</label>
+                    <label><input type="radio" name="8" class="yellow" id="answer8-3" value="3"> 3</label>
+                    <label><input type="radio" name="8" class="light-green" id="answer8-4" value="4"> 4</label>
+                    <label><input type="radio" name="8" class="green" id="answer8-5" value="5"> 5</label>             
+                   </fieldset>
+            </div>
+            <div class="card" id="card9">
+                <fieldset>
+                    <legend>dit is vraag 7</legend>
+                    <label><input type="radio" name="9" class="red" id="answer9-1" value="1"> 1</label>
+                    <label><input type="radio" name="9" class="orange" id="answer9-2" value="2"> 2</label>
+                    <label><input type="radio" name="9" class="yellow" id="answer9-3" value="3"> 3</label>
+                    <label><input type="radio" name="9" class="light-green" id="answer9-4" value="4"> 4</label>
+                    <label><input type="radio" name="9" class="green" id="answer9-5" value="5"> 5</label>             
+                   </fieldset>
+            </div>
+            <div class="card" id="card10">
+                <fieldset>
+                    <legend>dit is vraag 6</legend>
+                    <label><input type="radio" name="10" class="red" id="answer10-1" value="1"> 1</label>
+                    <label><input type="radio" name="10" class="orange" id="answer10-2" value="2"> 2</label>
+                    <label><input type="radio" name="10" class="yellow" id="answer10-3" value="3"> 3</label>
+                    <label><input type="radio" name="10" class="light-green" id="answer10-4" value="4"> 4</label>
+                    <label><input type="radio" name="10" class="green" id="answer10-5" value="5"> 5</label>             
+                   </fieldset>
+            </div>
+            <div class="card" id="card11">
+                <fieldset>
+                    <legend>dit is vraag 5</legend>
+                    <label><input type="radio" name="11" class="red" id="answer11-1" value="1"> 1</label>
+                    <label><input type="radio" name="11" class="orange" id="answer11-2" value="2"> 2</label>
+                    <label><input type="radio" name="11" class="yellow" id="answer11-3" value="3"> 3</label>
+                    <label><input type="radio" name="11" class="light-green" id="answer11-4" value="4"> 4</label>
+                    <label><input type="radio" name="11" class="green" id="answer11-5" value="5"> 5</label>             
+                   </fieldset>
+            </div>
+            <div class="card" id="card12">
+                <fieldset>
+                    <legend>dit is vraag 4</legend>
+                    <label><input type="radio" name="12" class="red" id="answer12-1" value="1"> 1</label>
+                    <label><input type="radio" name="12" class="orange" id="answer12-2" value="2"> 2</label>
+                    <label><input type="radio" name="12" class="yellow" id="answer12-3" value="3"> 3</label>
+                    <label><input type="radio" name="12" class="light-green" id="answer12-4" value="4"> 4</label>
+                    <label><input type="radio" name="12" class="green" id="answer12-5" value="5"> 5</label>             
+                   </fieldset>
+            </div>
+            <div class="card" id="card13">
+                <fieldset>
+                    <legend>dit is vraag 3</legend>
+                    <label><input type="radio" name="13" class="red" id="answer13-1" value="1"> 1</label>
+                    <label><input type="radio" name="13" class="orange" id="answer13-2" value="2"> 2</label>
+                    <label><input type="radio" name="13" class="yellow" id="answer13-3" value="3"> 3</label>
+                    <label><input type="radio" name="13" class="light-green" id="answer13-4" value="4"> 4</label>
+                    <label><input type="radio" name="13" class="green" id="answer13-5" value="5"> 5</label>             
+                   </fieldset>
+            </div>
+            <div class="card" id="card14">
+                <fieldset>
+                    <legend>dit is vraag 2</legend>
+                    <label><input type="radio" name="14" class="red" id="answer14-1" value="1"> 1</label>
+                    <label><input type="radio" name="14" class="orange" id="answer14-2" value="2"> 2</label>
+                    <label><input type="radio" name="14" class="yellow" id="answer14-3" value="3"> 3</label>
+                    <label><input type="radio" name="14" class="light-green" id="answer14-4" value="4"> 4</label>
+                    <label><input type="radio" name="14" class="green" id="answer14-5" value="5"> 5</label>             
+                   </fieldset>
+            </div>
+            <div class="card" id="card15">
+                <fieldset>
+                    <legend>dit is vraag 1</legend>
+                    <label><input type="radio" name="15" class="red" id="answer15-1" value="1"> 1</label>
+                    <label><input type="radio" name="15" class="orange" id="answer15-2" value="2"> 2</label>
+                    <label><input type="radio" name="15" class="yellow" id="answer15-3" value="3"> 3</label>
+                    <label><input type="radio" name="15" class="light-green" id="answer15-4" value="4"> 4</label>
+                    <label><input type="radio" name="15" class="green" id="answer15-5" value="5"> 5</label>             
+                   </fieldset>
+            </div>
         </section>
     </main> 
 </body>
