--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li> <a href="calculator.html"> Calculate </a></li>
             </ul>
         </nav>
-        <h1> The best calculator tool for <span>your</span> business!</h1>
+        <h1> The best calculator tool for <em>your</em> business!</h1>
     </header>
     <main>
         <section>
