--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div>
                 <h2> Why choose us? </h2>
                 yadayada hier komt tekst
-                <button> <a href="getStarted.html"> Click me!</a></button>
+                <a href="getStarted.html"> <button>Click me!</button></a>
             </div>
         </section>
     </main>
