homepage content added
content on index.html added, some styling aswell

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
-    <link rel="layout" href="styles/home.css">
+    <link rel="stylesheet" href="styles/home.css">
     <title>Handprint footprint calculator</title>
 </head>
 
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <ul>
-                <a href="index.html" class="logo"><img src="assets/logo.png" alt="home"></a>
+                <a href="index.html" class="logo"><img src="assets/logo.png" alt="home" class="logo"></a>
                 <li> <a href="getStarted.html" class="new-user">Get started</a></li>
                 <li> <a href="calculator.html"> Calculate </a></li>
             </ul>
@@ -21,14 +21,26 @@
         <h1> The best calculator tool for <em>your</em> business!</h1>
     </header>
     <main>
-        <section>
+        <section class="hero">
             <div>
-                <img src="assets/icon.png" alt="Icon">
+                <img src="assets/icon.png" alt="Icon" class="icon">
             </div>
-            <div>
-                <h2> Why choose us? </h2>
-                yadayada hier komt tekst
-                <a href="getStarted.html"> <button>Click me!</button></a>
+            <div class="content-hero">
+                <h2> Empower Your Business for Sustainability </h2>
+                Unlock comprehensive insights, track your environmental impact, and optimize your sustainability
+                strategies with the Crossmarx hand- footprint calculator. Tailored for businesses of all sizes, our user-friendly platform is
+                your key to a greener and more responsible future.
+
+                Why Choose Crossmarx hand- footprint calculator?
+                <ol>
+                <li>Comprehensive Insights</li>
+                <li>User-Friendly Interface</li>
+                <li>Customized Solutions</li>
+                <li>Real-time Tracking and Optimization</li>
+                <li>Join Thousands of Businesses Transforming Sustainability</li>
+                </ol>
+                <p>Together, Let's Build a Better Tomorrow!</p>
+                <a href="getStarted.html"> <button class="click-me">Click me!</button></a>
             </div>
         </section>
     </main>
