--- a/getStarted.html
+++ b/getStarted.html
@@ -12,7 +12,7 @@
     <header>
         <nav>
             <ul>
-                <a href="index.html" class="logo"><img src="assets/logo.png" alt="home"></a>
+                <a href="index.html" class="logo"><img src="assets/logo.png" alt="home" class="logo"></a>
                 <li> <a href="getStarted.html" class="new-user">Get started</a></li>
                 <li> <a href="calculator.html"> Calculate </a></li>
             </ul>
