--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <ul>
-                <a href="index.html" class="logo"><img src="assets/logo.png" alt="home" class="logo"></a>
+                <a href="index.html"><img src="assets/logo.png" alt="home" class="logo"></a>
                 <li> <a href="getStarted.html" class="new-user">Get started</a></li>
                 <li> <a href="calculator.html"> Calculate </a></li>
             </ul>
