start styling calculate page

--- a/calculator.html
+++ b/calculator.html
@@ -16,12 +16,14 @@
         </ul>
     </nav>
     <main>
-        <section class="scorecard">
-            <h2> Stakeholder</h2>
-            <img src="assets/icon.png" alt="stakeholder">
+        <section class="background-scorecard">
+            <article class="scorecard">
+            <h3> Stakeholder</h3>
+            <img src="assets/icon.png" alt="stakeholder" class="icon">
             Score: <em> 3/5</em>
+        </article>
         </section>
-        <section>
+        <section class="questioncard">
             <div class="card" id="card1">
                 <fieldset>
                     <legend>dit is vraag 5</legend>
