HTML Validator fixes 9/12/2023

--- a/getStarted.html
+++ b/getStarted.html
@@ -11,8 +11,8 @@
 <body>
     <header>
         <nav>
+            <a href="index.html"><img src="assets/logo.png" alt="home" class="logo"></a>
             <ul>
-                <a href="index.html" class="logo"><img src="assets/logo.png" alt="home" class="logo"></a>
                 <li> <a href="getStarted.html" class="new-user">Get started</a></li>
                 <li> <a href="calculator.html"> Calculate </a></li>
             </ul>
@@ -35,7 +35,7 @@
                 <h3>How we calculate</h3>
                 <p> We calculate using these 12 Sustainable development goals</p>
                 De 12 goals etc
-                <a href="calculator.html"> <button> Start calculating! </button></a>
+                <a href="calculator.html" class="click-me">  Start calculating! </a>
             </div>
             <img src="#" alt="SDG">
         </section>
