--- a/calculator.html
+++ b/calculator.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <nav>
+        <a href="index.html"><img src="assets/logo.png" alt="home" class="logo"></a>
         <ul>
-            <a href="index.html" class="logo"><img src="assets/logo.png" alt="home" class="logo"></a>
             <li> <a href="getStarted.html" class="new-user">Get started</a></li>
             <li> <a href="calculator.html"> Calculate </a></li>
         </ul>
