--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <header>
         <nav>
+            <a href="index.html"><img src="assets/logo.png" alt="home" class="logo"></a>
             <ul>
-                <a href="index.html"><img src="assets/logo.png" alt="home" class="logo"></a>
                 <li> <a href="getStarted.html" class="new-user">Get started</a></li>
                 <li> <a href="calculator.html"> Calculate </a></li>
             </ul>
@@ -40,7 +40,7 @@
                 <li>Join Thousands of Businesses Transforming Sustainability</li>
                 </ol>
                 <p>Together, Let's Build a Better Tomorrow!</p>
-                <a href="getStarted.html"> <button class="click-me">Click me!</button></a>
+                <a href="getStarted.html" class="click-me"> Click me! </a>
             </div>
         </section>
     </main>
