zigzag layout added+content
get started tab almost finished

--- a/getStarted.html
+++ b/getStarted.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/zigzag.css">
     <title>Get Started</title>
 </head>
 
@@ -19,25 +20,62 @@
         </nav>
     </header>
     <main>
-        <section>
-            <div>
+        <section class="flex-container">
+            <div class="col-one"><img src="/assets/icon.png" alt="Company Logo"></div>
+            <div class="company-introduction col-two">
                 <h3> Why us? </h3>
-                <p> MOTTO//SLOGAN </p>
-                yadayada ga verder
+                <p> Empowering Change, One Footprint at a Time: Calculating Ecological Impact, Cultivating Positive Handprints. </p>
+                Welcome to Crossmarx, where sustainability meets empowerment for a greener world. As stewards of
+                our planet, we understand that every action leaves a lasting imprint.
+                Our user-friendly tools empower individuals and businesses to assess their ecological footprint,
+                providing insights into carbon emissions and resource consumption.
+                Yet, we go beyond calculations, inspiring the cultivation of positive "handprints"—actions actively
+                contributing to environmental restoration and conservation.
+
+                At Crossmarx, we believe in the transformative power of informed choices. Navigate your
+                environmental impact, understand your carbon footprint,
+                and take meaningful steps towards a more sustainable lifestyle.
+                Our platform serves as a hub for exploring possibilities and taking actionable measures for positive
+                change.
+
+                Join us on the journey towards a brighter, more sustainable future. Take control of your impact, explore
+                possibilities, and cultivate positive handprints. With Crossmarx,
+                you're not just calculating; you're actively participating in creating a healthier, more sustainable
+                tomorrow—one footprint at a time.
             </div>
-            <div>
+            <div class="col-one">
                 <h3> Stakeholders</h3>
                 <p> We have 5 stakeholders that we prioritize</p>
                 stakeholders yadayada
             </div>
-            <img src="#" alt="Stakeholders">
-            <div>
+            <div class="col-two"><img src="/assets/icon.png" alt="Stakeholders"></div>
+            <div class="col-one"><img src="/assets/icon.png" alt="SDG"></div>
+            <div class="col-two">
                 <h3>How we calculate</h3>
                 <p> We calculate using these 12 Sustainable development goals</p>
-                De 12 goals etc
-                <a href="calculator.html" class="click-me">  Start calculating! </a>
+                <ol>
+                    <li>No Poverty: End poverty in all its forms everywhere.</li>
+                    <li>Zero Hunger: End hunger, achieve food security and improved nutrition, and promote sustainable agriculture.</li>
+                    <li>Good Health and Well-being: Ensure healthy lives and promote well-being for all at all ages.</li>
+                    <li>Quality Education: Ensure inclusive and equitable quality education and promote lifelong learning opportunities for all.</li>
+                    <li>Gender Equality: Achieve gender equality and empower all women and girls.</li>
+                    <li>Clean Water and Sanitation: Ensure availability and sustainable management of water and sanitation for all.</li>
+                    <li>Affordable and Clean Energy: Ensure access to affordable, reliable, sustainable, and modern energy for all.</li>
+                    <li>Decent Work and Economic Growth: Promote sustained, inclusive, and sustainable economic growth, full and productive employment, and decent work for all.
+                     Industry, Innovation, and Infrastructure: Build resilient infrastructure, promote inclusive and sustainable industrialization, and foster innovation.</li>
+                    <li>Reduced Inequality: Reduce inequality within and among countries.</li>
+                    <li>Sustainable Cities and Communities: Make cities and human settlements inclusive, safe, resilient, and sustainable.</li>
+                    <li>Responsible Consumption and Production: Ensure sustainable consumption and production patterns.</li>
+                    <li>Climate Action: Take urgent action to combat climate change and its impacts.</li>
+                    <li>Life Below Water: Conserve and sustainably use the oceans, seas, and marine resources for sustainable development.</li>
+                    <li>Life on Land: Protect, restore, and promote sustainable use of terrestrial ecosystems, sustainably manage forests, combat desertification,
+                     and halt and reverse land degradation and halt biodiversity loss.</li>
+                    <li>Peace, Justice, and Strong Institutions: Promote peaceful and inclusive societies for sustainable development, provide access to justice for all,
+                     and build effective, accountable, and inclusive institutions at all levels.</li>
+                    <li>Partnerships for the Goals: Strengthen the means of implementation and revitalize the Global Partnership for Sustainable Development.</li>
+                </ol>
+                <a href="calculator.html" class="click-me"> Start calculating! </a>
             </div>
-            <img src="#" alt="SDG">
         </section>
     </main>
 </body>
